Cambiar colores de botones a dorado y ajustar el diseño

--- a/carrito.html
+++ b/carrito.html
@@ -9,12 +9,13 @@
 <body>
     <header>
         <div class="logo">
-            <h1>Tienda de Ropa Masculina</h1>
+            <h1>M-Style</h1>
         </div>
         <nav>
             <ul>
                 <li><a href="index.html">Inicio</a></li>
-                <li><a href="carrito.html">Carrito</a></li>
+                <li><a href="carrito.html"><i class="fas fa-shopping-cart"></i></a>
+
             </ul>
         </nav>
     </header>
