--- a/index.html
+++ b/index.html
@@ -3,26 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tienda de Ropa Masculina</title>
+    <title>M-Style</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
         <div class="logo">
-            <h1>Tienda de Ropa Masculina</h1>
+            <h1>M-Style</h1>
         </div>
         <nav>
             <ul>
                 <li><a href="#productos">Productos</a></li>
-                <li><a href="carrito.html">Carrito</a></li>
+                <li><a href="carrito.html"><i class="fas fa-shopping-cart"></i></a>
+
             </ul>
         </nav>
     </header>
 
     <main>
         <section class="intro">
-            <h2>Bienvenidos a nuestra Tienda de Ropa</h2>
-            <p>Explora nuestra selección de ropa masculina.</p>
+            <h2>Bienvenido a M-Style</h2>
+            <p>donde encontrarás la mejor selección de ropa masculina con estilo y comodidad.</p>
         </section>
 
         <section id="productos" class="productos">
