Optimización de imágenes utilizando formato WebP

--- a/index.html
+++ b/index.html
@@ -32,73 +32,109 @@
             <h2>Productos Disponibles</h2>
             <div class="grid-container">
                 <div class="producto">
-                    <img src="img/producto1.jpg" alt="Camiseta Básica" loading="lazy">
+                    <picture>
+                        <source srcset="img/producto1WebP.webp" type="image/webp">
+                        <img src="img/producto1.jpg" alt="Camiseta Básica" loading="lazy">
+                    </picture>
                     <h3>Camiseta Básica</h3>
                     <p>$10.00</p>
                     <button onclick="addToCart('Camiseta Básica', 10)">Añadir al Carrito</button>
                 </div>
                 <div class="producto">
-                    <img src="img/producto2.jpg" alt="Pantalón Chino" loading="lazy">
+                    <picture>
+                        <source srcset="img/producto2WebP.webp" type="image/webp">
+                        <img src="img/producto2.jpg" alt="Pantalón Chino" loading="lazy">
+                    </picture>
                     <h3>Pantalón Chino</h3>
                     <p>$25.00</p>
                     <button onclick="addToCart('Pantalón Chino', 25)">Añadir al Carrito</button>
                 </div>
                 <div class="producto">
-                    <img src="img/producto3.jpg" alt="Chaqueta Deportiva" loading="lazy">
+                    <picture>
+                        <source srcset="img/producto3WebP.webp" type="image/webp">
+                        <img src="img/producto3.jpg" alt="Chaqueta Deportiva" loading="lazy">
+                    </picture>
                     <h3>Chaqueta Deportiva</h3>
                     <p>$40.00</p>
                     <button onclick="addToCart('Chaqueta Deportiva', 40)">Añadir al Carrito</button>
                 </div>
                 <div class="producto">
-                    <img src="img/producto4.jpg" alt="Jeans Slim Fit" loading="lazy">
+                    <picture>
+                        <source srcset="img/producto4WebP.webp" type="image/webp">
+                        <img src="img/producto4.jpg" alt="Jeans Slim Fit" loading="lazy">
+                    </picture>
                     <h3>Jeans Slim Fit</h3>
                     <p>$30.00</p>
                     <button onclick="addToCart('Jeans Slim Fit', 30)">Añadir al Carrito</button>
                 </div>
                 <div class="producto">
-                    <img src="img/producto5.jpg" alt="Polo Casual" loading="lazy">
+                    <picture>
+                        <source srcset="img/producto5WebP.webp" type="image/webp">
+                        <img src="img/producto5.jpg" alt="Polo Casual" loading="lazy">
+                    </picture>
                     <h3>Polo Casual</h3>
                     <p>$15.00</p>
                     <button onclick="addToCart('Polo Casual', 15)">Añadir al Carrito</button>
                 </div>
                 <div class="producto">
-                    <img src="img/producto6.jpg" alt="Shorts de Verano" loading="lazy">
+                    <picture>
+                        <source srcset="img/producto6WebP.webp" type="image/webp">
+                        <img src="img/producto6.jpg" alt="Shorts de Verano" loading="lazy">
+                    </picture>
                     <h3>Shorts de Verano</h3>
                     <p>$20.00</p>
                     <button onclick="addToCart('Shorts de Verano', 20)">Añadir al Carrito</button>
                 </div>
                 <div class="producto">
-                    <img src="img/producto7.jpg" alt="Sudadera con Capucha" loading="lazy">
+                    <picture>
+                        <source srcset="img/producto7WebP.webp" type="image/webp">
+                        <img src="img/producto7.jpg" alt="Sudadera con Capucha" loading="lazy">
+                    </picture>
                     <h3>Sudadera con Capucha</h3>
                     <p>$35.00</p>
                     <button onclick="addToCart('Sudadera con Capucha', 35)">Añadir al Carrito</button>
                 </div>
                 <div class="producto">
-                    <img src="img/producto8.jpg" alt="Zapatos Deportivos" loading="lazy">
+                    <picture>
+                        <source srcset="img/producto8WebP.webp" type="image/webp">
+                        <img src="img/producto8.jpg" alt="Zapatos Deportivos" loading="lazy">
+                    </picture>
                     <h3>Zapatos Deportivos</h3>
                     <p>$50.00</p>
                     <button onclick="addToCart('Zapatos Deportivos', 50)">Añadir al Carrito</button>
                 </div>
                 <div class="producto">
-                    <img src="img/producto9.jpg" alt="Corbata Elegante" loading="lazy">
+                    <picture>
+                        <source srcset="img/producto9WebP.webp" type="image/webp">
+                        <img src="img/producto9.jpg" alt="Corbata Elegante" loading="lazy">
+                    </picture>
                     <h3>Corbata Elegante</h3>
                     <p>$12.00</p>
                     <button onclick="addToCart('Corbata Elegante', 12)">Añadir al Carrito</button>
                 </div>
                 <div class="producto">
-                    <img src="img/producto10.jpg" alt="Camisa Formal" loading="lazy">
+                    <picture>
+                        <source srcset="img/producto10WebP.webp" type="image/webp">
+                        <img src="img/producto10.jpg" alt="Camisa Formal" loading="lazy">
+                    </picture>
                     <h3>Camisa Formal</h3>
                     <p>$28.00</p>
                     <button onclick="addToCart('Camisa Formal', 28)">Añadir al Carrito</button>
                 </div>
                 <div class="producto">
-                    <img src="img/producto11.jpg" alt="Reloj Deportivo" loading="lazy">
+                    <picture>
+                        <source srcset="img/producto11WebP.webp" type="image/webp">
+                        <img src="img/producto11.jpg" alt="Reloj Deportivo" loading="lazy">
+                    </picture>
                     <h3>Reloj Deportivo</h3>
                     <p>$60.00</p>
                     <button onclick="addToCart('Reloj Deportivo', 60)">Añadir al Carrito</button>
                 </div>
                 <div class="producto">
-                    <img src="img/producto12.jpg" alt="Cinturón de Cuero" loading="lazy">
+                    <picture>
+                        <source srcset="img/producto12WebP.webp" type="image/webp">
+                        <img src="img/producto12.jpg" alt="Cinturón de Cuero" loading="lazy">
+                    </picture>
                     <h3>Cinturón de Cuero</h3>
                     <p>$18.00</p>
                     <button onclick="addToCart('Cinturón de Cuero', 18)">Añadir al Carrito</button>
