Mejoras de rendimiento Lighthouse (width y height)

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <div class="producto">
                     <picture>
                         <source srcset="img/producto1WebP.webp" type="image/webp">
-                        <img src="img/producto1.jpg" alt="Camiseta Básica" loading="lazy">
+                        <img src="img/producto1.jpg" alt="Camiseta Básica" loading="lazy" width="832" height="1216">
                     </picture>
                     <h3>Camiseta Básica</h3>
                     <p>$10.00</p>
@@ -43,7 +43,7 @@
                 <div class="producto">
                     <picture>
                         <source srcset="img/producto2WebP.webp" type="image/webp">
-                        <img src="img/producto2.jpg" alt="Pantalón Chino" loading="lazy">
+                        <img src="img/producto2.jpg" alt="Pantalón Chino" loading="lazy" width="832" height="1216">
                     </picture>
                     <h3>Pantalón Chino</h3>
                     <p>$25.00</p>
@@ -52,7 +52,7 @@
                 <div class="producto">
                     <picture>
                         <source srcset="img/producto3WebP.webp" type="image/webp">
-                        <img src="img/producto3.jpg" alt="Chaqueta Deportiva" loading="lazy">
+                        <img src="img/producto3.jpg" alt="Chaqueta Deportiva" loading="lazy" width="832" height="1216">
                     </picture>
                     <h3>Chaqueta Deportiva</h3>
                     <p>$40.00</p>
@@ -61,7 +61,7 @@
                 <div class="producto">
                     <picture>
                         <source srcset="img/producto4WebP.webp" type="image/webp">
-                        <img src="img/producto4.jpg" alt="Jeans Slim Fit" loading="lazy">
+                        <img src="img/producto4.jpg" alt="Jeans Slim Fit" loading="lazy" width="832" height="1216">
                     </picture>
                     <h3>Jeans Slim Fit</h3>
                     <p>$30.00</p>
@@ -70,7 +70,7 @@
                 <div class="producto">
                     <picture>
                         <source srcset="img/producto5WebP.webp" type="image/webp">
-                        <img src="img/producto5.jpg" alt="Polo Casual" loading="lazy">
+                        <img src="img/producto5.jpg" alt="Polo Casual" loading="lazy" width="832" height="1216">
                     </picture>
                     <h3>Polo Casual</h3>
                     <p>$15.00</p>
@@ -79,7 +79,7 @@
                 <div class="producto">
                     <picture>
                         <source srcset="img/producto6WebP.webp" type="image/webp">
-                        <img src="img/producto6.jpg" alt="Shorts de Verano" loading="lazy">
+                        <img src="img/producto6.jpg" alt="Shorts de Verano" loading="lazy" width="832" height="1216">
                     </picture>
                     <h3>Shorts de Verano</h3>
                     <p>$20.00</p>
@@ -88,7 +88,7 @@
                 <div class="producto">
                     <picture>
                         <source srcset="img/producto7WebP.webp" type="image/webp">
-                        <img src="img/producto7.jpg" alt="Sudadera con Capucha" loading="lazy">
+                        <img src="img/producto7.jpg" alt="Sudadera con Capucha" loading="lazy" width="832" height="1216">
                     </picture>
                     <h3>Sudadera con Capucha</h3>
                     <p>$35.00</p>
@@ -97,7 +97,7 @@
                 <div class="producto">
                     <picture>
                         <source srcset="img/producto8WebP.webp" type="image/webp">
-                        <img src="img/producto8.jpg" alt="Zapatos Deportivos" loading="lazy">
+                        <img src="img/producto8.jpg" alt="Zapatos Deportivos" loading="lazy" width="832" height="1216">
                     </picture>
                     <h3>Zapatos Deportivos</h3>
                     <p>$50.00</p>
@@ -106,7 +106,7 @@
                 <div class="producto">
                     <picture>
                         <source srcset="img/producto9WebP.webp" type="image/webp">
-                        <img src="img/producto9.jpg" alt="Corbata Elegante" loading="lazy">
+                        <img src="img/producto9.jpg" alt="Corbata Elegante" loading="lazy" width="832" height="1216">
                     </picture>
                     <h3>Corbata Elegante</h3>
                     <p>$12.00</p>
@@ -115,7 +115,7 @@
                 <div class="producto">
                     <picture>
                         <source srcset="img/producto10WebP.webp" type="image/webp">
-                        <img src="img/producto10.jpg" alt="Camisa Formal" loading="lazy">
+                        <img src="img/producto10.jpg" alt="Camisa Formal" loading="lazy" width="896" height="1152">
                     </picture>
                     <h3>Camisa Formal</h3>
                     <p>$28.00</p>
@@ -124,7 +124,7 @@
                 <div class="producto">
                     <picture>
                         <source srcset="img/producto11WebP.webp" type="image/webp">
-                        <img src="img/producto11.jpg" alt="Reloj Deportivo" loading="lazy">
+                        <img src="img/producto11.jpg" alt="Reloj Deportivo" loading="lazy" width="832" height="1216">
                     </picture>
                     <h3>Reloj Deportivo</h3>
                     <p>$60.00</p>
@@ -133,7 +133,7 @@
                 <div class="producto">
                     <picture>
                         <source srcset="img/producto12WebP.webp" type="image/webp">
-                        <img src="img/producto12.jpg" alt="Cinturón de Cuero" loading="lazy">
+                        <img src="img/producto12.jpg" alt="Cinturón de Cuero" loading="lazy" width="832" height="1216">
                     </picture>
                     <h3>Cinturón de Cuero</h3>
                     <p>$18.00</p>
