Mejoras de rendimiento según Lighthouse

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <div class="producto">
                     <picture>
                         <source srcset="img/producto1WebP.webp" type="image/webp">
-                        <img src="img/producto1.jpg" alt="Camiseta Básica" loading="lazy" width="832" height="1216">
+                        <img src="img/producto1.jpg" alt="Camiseta Básica" width="832" height="1216">
                     </picture>
                     <h3>Camiseta Básica</h3>
                     <p>$10.00</p>
